base/cilium/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium
  namespace: cilium
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: cilium
  ingress:
  # In-namespace
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cilium
        app.kubernetes.io/part-of: cilium
  egress:
  # In-namespace
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cilium
        app.kubernetes.io/part-of: cilium
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
